recycle problem solved with changing logger location. double point match problem solved. simulateallweeks created.
