# docs/swagger.json
@@ -107,6 +107,35 @@
                     }
                 }
             }
+        },
+        "/simulate-all-weeks": {
+            "post": {
+                "description": "Ligdeki kalan tüm haftaları otomatik olarak simüle eder ve sonuçları döndürür",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "league"
+                ],
+                "summary": "Tüm ligi simüle eder",
+                "responses": {
+                    "200": {
+                        "description": "Tüm simüle edilmiş maçların sonuçları",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Match"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -159,6 +188,10 @@
         "models.Team": {
             "type": "object",
             "properties": {
+                "draws": {
+                    "description": "Yeni eklendi",
+                    "type": "integer"
+                },
                 "goals_against": {
                     "type": "integer"
                 },
@@ -166,6 +199,10 @@
                     "type": "integer"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "loses": {
+                    "description": "Yeni eklendi",
                     "type": "integer"
                 },
                 "matches_played": {
@@ -178,6 +215,10 @@
                     "type": "integer"
                 },
                 "strength": {
+                    "type": "integer"
+                },
+                "wins": {
+                    "description": "Yeni eklendi",
                     "type": "integer"
                 }
             }
