# internal/platform/router.go
@@ -5,10 +5,13 @@ import (
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+
+	// "github.com/muzaffertuna/football-league-sim/internal/app/handlers" // <--- BU SATIR KALDIRILDI!
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-func NewRouter(leagueHandler LeagueHandler) http.Handler {
+// NewRouter fonksiyonunun LeagueHandlerContract arayüzünü alması gerekiyor.
+func NewRouter(leagueHandler LeagueHandlerContract) http.Handler { // <--- Düzeltildi: *handlers.LeagueHandler yerine LeagueHandlerContract
 	r := chi.NewRouter()
 
 	r.Use(middleware.Logger)
@@ -22,6 +25,7 @@ func NewRouter(leagueHandler LeagueHandler) http.Handler {
 	r.Post("/play-week", leagueHandler.PlayWeek)
 	r.Post("/reset-league", leagueHandler.ResetLeague)
 	r.Get("/fixture", leagueHandler.GetFixture)
+	r.Post("/simulate-all-weeks", leagueHandler.SimulateAllWeeks)
 
 	return r
 }
